examples/invalid/syntax/5.lua
-- ОШИБКА: незакрытая строка
local s = "unterminated string

-- ОШИБКА: перенос строки в обычной строке
local s = "строка с
переносом"

-- ОШИБКА: незакрытая длинная строка
local s = [[многострочная
строка без закрытия

-- ОШИБКА: неправильная escape-последовательность
local s = "\q"

-- ОШИБКА: неправильное экранирование кавычки
local s = "\"  -- правильно: "\""

-- ОШИБКА: несбалансированные длинные скобки
local s = [==[ текст с [=[ неправильными скобками ]=]